XHR on mobile browsesr fixed

--- a/css/live.css
+++ b/css/live.css
@@ -56,7 +56,7 @@ select:disabled {
 }
 .MNT {
 	background: RGB(255, 151, 0);
-	color: #444;
+	color: #555;
 }
 
 .UDF {
@@ -121,7 +121,8 @@ header {
 /* LIVE  ///////////////////////////////// */
 
 #live-sec {
-	font-size: clamp(10px, 1vw, 14px);
+	font-size: clamp(14px, 1vw, 16px);
+	font-size:15px;
 }
 
 .live-bar {
@@ -151,20 +152,21 @@ header {
 .live-bar table{
 	width:100%;
 }
-.live-bar table tr{
-background:#353535;
-}
 
-.live-bar table tr:nth-child(even){
-	background:#404040;
+.live-bar table tr:nth-child(odd){
+	background:#616161;
 }
 
 .live-bar td{
 	padding:5px;
 	text-align: center;
-
 }
 
+.live-bar tr td:first-child{
+
+	min-width:120px;
+	
+}
 
 
 .live-bar tr td:nth-child(2){
@@ -223,6 +225,10 @@ background:#353535;
 
 .mach p {
 	text-align: center;
+}
+
+.mach-remark{
+	font-size:10px;
 }
 
 .mach button {
